// Original file: ../../auth/proto/user.proto


export interface LocalGrpcUser {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'password'?: (string);
}

export interface LocalGrpcUser__Output {
  'firstName': (string);
  'lastName': (string);
  'email': (string);
  'password': (string);
}
