// Original file: src/services/proto/user.proto


export interface GrpcUser {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'gender'?: (string);
  'race'?: (string);
  'position'?: (string);
  'startDate'?: (string);
  'shiftPreference'?: (string);
  'branchName'?: (string);
  'region'?: (string);
  'country'?: (string);
  'phoneNumber'?: (string);
  'email'?: (string);
  'version'?: (number);
  'signInType'?: (string);
  'providerId'?: (string);
  'password'?: (string);
  'userRole'?: (string);
  'registeredEmployee'?: (string);
}

export interface GrpcUser__Output {
  'id': (string);
  'firstName': (string);
  'lastName': (string);
  'gender': (string);
  'race': (string);
  'position': (string);
  'startDate': (string);
  'shiftPreference': (string);
  'branchName': (string);
  'region': (string);
  'country': (string);
  'phoneNumber': (string);
  'email': (string);
  'version': (number);
  'signInType': (string);
  'providerId': (string);
  'password': (string);
  'userRole': (string);
  'registeredEmployee': (string);
}
