// Original file: src/clients/proto/user.proto


export interface ServerStreamUserResponse {
  'id'?: (string);
  'firstNAme'?: (string);
  'lastName'?: (string);
  'gender'?: (string);
  'ethnicity'?: (string);
  'position'?: (string);
  'startDate'?: (string);
  'shiftPreference'?: (string);
  'branchName'?: (string);
  'region'?: (string);
  'country'?: (string);
  'phoneNUmber'?: (string);
  'email'?: (string);
  'version'?: (number);
  'signInType'?: (string);
  'providerId'?: (string);
  'userRole'?: (string);
}

export interface ServerStreamUserResponse__Output {
  'id': (string);
  'firstNAme': (string);
  'lastName': (string);
  'gender': (string);
  'ethnicity': (string);
  'position': (string);
  'startDate': (string);
  'shiftPreference': (string);
  'branchName': (string);
  'region': (string);
  'country': (string);
  'phoneNUmber': (string);
  'email': (string);
  'version': (number);
  'signInType': (string);
  'providerId': (string);
  'userRole': (string);
}
